--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.1",
     "express": "^4.18.2",
+    "mui-image-slider": "^1.0.7",
     "next": "13.1.1",
     "next-images": "^1.8.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-helmet-async": "^1.3.0",
-   
     "react-redux": "^8.0.5",
     "redux": "^4.2.0",
     "swiper": "^8.4.5",
