--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@hookform/resolvers": "^3.1.0",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.1",
     "express": "^4.18.2",
@@ -20,10 +21,12 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-helmet-async": "^1.3.0",
+    "react-hook-form": "^7.43.9",
     "react-redux": "^8.0.5",
     "redux": "^4.2.0",
     "swiper": "^8.4.5",
-    "web-vitals": "^3.1.0"
+    "web-vitals": "^3.1.0",
+    "yup": "^1.1.1"
   },
   "devDependencies": {
     "sass": "^1.57.1"
