--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.43.9",
     "react-redux": "^8.0.5",
+    "react-toastify": "^9.1.2",
     "redux": "^4.2.0",
     "swiper": "^8.4.5",
     "web-vitals": "^3.1.0",
