--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "@hookform/resolvers": "^3.1.0",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.1",
+    "bootstrap": "^5.2.3",
     "express": "^4.18.2",
     "mui-image-slider": "^1.0.7",
     "next": "13.1.1",
     "next-images": "^1.8.4",
     "react": "18.2.0",
+    "react-bootstrap": "^2.7.4",
+    "react-bootstrap-carousel": "^4.1.1",
     "react-dom": "18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.43.9",
